<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    android:orientation="vertical"
    android:background="@android:color/background_light"
    tools:context=".Calculation">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_calc_back_menu" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25sp">

        <TextView
            android:id="@+id/calcTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/calculation_title_text"
            android:textSize="30sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="0pt"
        android:paddingBottom="0pt"
        android:layout_marginTop="1sp">

        <ImageView
            android:id="@+id/smart_shopper_logo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:scaleType="centerInside"
            android:layout_centerHorizontal="true"
            android:adjustViewBounds="true"
            app:srcCompat="@drawable/smart_shopper_card"
            android:contentDescription="TODO" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1sp">

        <TextView
            android:id="@+id/calcSubTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/how_to_earn_points_text_heading"
            android:textColor="#3F51B5"
            android:textSize="18sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/calcInfo"
            android:layout_width="295sp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8sp"
            android:text="@string/how_to_earn_points_text_paragraph"
            android:textAlignment="center"
            android:justificationMode="inter_word"
            android:layout_centerHorizontal="true"
            android:textColor="#E24F5FB6"
            android:textSize="16sp"
            android:gravity="center_horizontal" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30sp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textCostItem"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="35sp"
            android:textSize="16sp"
            android:textColor="#E24F5FB6"
            android:text="@string/cost_of_item_text"
            android:layout_marginLeft="30sp" />

        <EditText
            android:id="@+id/editCostItem"
            android:layout_width="70sp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="100sp"
            android:layout_marginRight="100sp"
            android:hint="@string/currency_hint"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textCostItem"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="35sp"
            android:textSize="16sp"
            android:textColor="#E24F5FB6"
            android:text="@string/cost_of_item_text"
            android:layout_marginLeft="30sp" />
    </LinearLayout>
</LinearLayout>