<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    tools:context=".MyDevProfile">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_back_profile_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#ff9900"
            android:text="@string/button_dev_profile_back_menu"
            android:textColor="@color/white" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp">

        <TextView
            android:id="@+id/myDetailsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/text_my_details_title"
            android:textColor="@color/black"
            android:textSize="35sp"
            android:textStyle="bold" />
    </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="20sp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30sp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/account_icon"
                    android:layout_width="60dp"
                    android:layout_height="70dp"
                    android:layout_marginLeft="10sp"
                    android:layout_weight="1"
                    app:tint="@color/teal_700"
                    app:srcCompat="@drawable/ic_baseline_account_icon"
                    tools:ignore="VectorDrawableCompat" />

                <TextView
                    android:id="@+id/studnet_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30sp"
                    android:layout_marginTop="22sp"
                    android:text="@string/text_student_name"
                    android:textColor="@color/teal_700"
                    android:textSize="14sp">


                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/phone_iphone"
                    android:layout_width="60dp"
                    android:layout_height="70dp"
                    android:layout_marginLeft="12sp"
                    android:layout_marginTop="10sp"
                    android:layout_weight="1"
                    app:tint="@color/teal_700"
                    app:srcCompat="@drawable/ic_baseline_phone_iphone_24"
                    tools:ignore="VectorDrawableCompat" />

                <TextView
                    android:id="@+id/contact_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30sp"
                    android:layout_marginTop="32sp"
                    android:layout_weight="1"
                    android:autoLink="phone"
                    android:text="@string/text_contact_number"
                    android:textColor="@color/teal_700"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/email_image"
                    android:layout_width="50dp"
                    android:layout_height="70dp"
                    android:layout_marginLeft="15sp"
                    android:layout_marginTop="10sp"
                    android:layout_weight="1"
                    app:tint="@color/teal_700"
                    app:srcCompat="@drawable/ic_baseline_email_24"
                    tools:ignore="VectorDrawableCompat" />

                <TextView
                    android:id="@+id/email_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="35sp"
                    android:layout_marginTop="32sp"
                    android:layout_weight="1"
                    android:autoLink="email"
                    android:text="@string/text_email"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="60dp"
                    android:layout_height="70dp"
                    android:layout_marginLeft="12dp"
                    android:layout_marginTop="10sp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/ic_linkedin"
                    tools:ignore="VectorDrawableCompat"
                    app:tint="@color/teal_700" />

                <TextView
                    android:id="@+id/linkedin_text"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="20sp"
                    android:layout_weight="1"
                    android:autoLink="all"
                    android:padding="3dp"
                    android:text="@string/text_linkedin"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal"></LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="60dp"
                    android:layout_height="70dp"
                    android:layout_weight="1"
                    android:layout_marginTop="10sp"
                    android:layout_marginLeft="12dp"
                    app:srcCompat="@drawable/ic_baseline_facebook"
                    tools:ignore="VectorDrawableCompat"
                    app:tint="@color/teal_700" />

                <TextView
                    android:id="@+id/facebook_text"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="20sp"
                    android:layout_weight="1"
                    android:autoLink="all"
                    android:padding="3dp"
                    android:text="@string/text_facebook"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
            </LinearLayout>

        </LinearLayout>
</LinearLayout>